[tool.poetry]
name = "ddqn"
version = "0.1.0"
description = "Double Deep Q-Network PyTorch implementation"
authors = ["Avinash Ranganath <nash911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.3.1"
gymnasium = "^1.0.0"
pygame = "^2.6.0"
numpy = "^2.1.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
